--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@capacitor/camera": "6.0.2",
     "@capacitor/filesystem": "6.0.1",
     "@capacitor/preferences": "6.0.2",
+    "@ionic/vue": "^8.3.4",
+    "@ionic/vue-router": "^8.3.4",
     "@nuxtjs/ionic": "latest",
     "autoprefixer": "^10.4.20",
     "nuxt": "3.12.4",
